--- a/index.html
+++ b/index.html
@@ -93,27 +93,27 @@
                     <a href="">Programming-Based Projects</a>
                 </div>
                 <div class="opt-card">
-                    <h3>Projects</h3>
+                    <h3>Websites</h3>
                     <hr>
-                    <a href="">Latest Projects</a>
-                    <a href="">Top Projects</a>
-                    <a href="">Frontend-Based Projects</a>
-                    <a href="">Programming-Based Projects</a>
+                    <a href="">Blog Website</a>
+                    <a href="">Portfolio Website</a>
+                    <a href="">Mini-Games (HTML5)</a>
+                    <a href="">Website Componenets</a>
                 </div>
                 <div class="opt-card">
-                    <h3>Projects</h3>
+                    <h3>Programs</h3>
                     <hr>
-                    <a href="">Latest Projects</a>
-                    <a href="">Top Projects</a>
-                    <a href="">Frontend-Based Projects</a>
-                    <a href="">Programming-Based Projects</a>
+                    <a href="">Top Programs</a>
+                    <a href="">Latest Programs</a>
+                    <a href="">Basic OOPS Programs</a>
+                    <a href="">Complex OOPS Programs</a>
                 </div><div class="opt-card">
-                    <h3>Projects</h3>
+                    <h3>Exclusive</h3>
                     <hr>
-                    <a href="">Latest Projects</a>
-                    <a href="">Top Projects</a>
-                    <a href="">Frontend-Based Projects</a>
-                    <a href="">Programming-Based Projects</a>
+                    <a href="">Free Games</a>
+                    <a href="">Free Books</a>
+                    <a href="">Best Free Tools</a>
+                    <a href="">Must Have Goodies!!</a>
                 </div>
             </div>
         </div>
