--- a/404.html
+++ b/404.html
@@ -20,6 +20,7 @@
     <link rel="apple-touch-icon" href="logo.webp">
 
     <!-- style -->
+    <link rel="preload" href="default.css" as="style">
     <link rel="stylesheet" href="default.css">
 
     <!-- fonts -->
