--- a/template.html
+++ b/template.html
@@ -16,12 +16,12 @@
     <meta itemprop="url" content="urlHere">
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="logo.webp" type="image/x-icon">
-    <link rel="apple-touch-icon" href="logo.webp">
+    <link rel="shortcut icon" href="./logo.webp" type="image/x-icon">
+    <link rel="apple-touch-icon" href="./logo.webp">
 
     <!-- style -->
-    <link rel="preload" href="default.css" as="style">
-    <link rel="stylesheet" href="default.css">
+    <link rel="preload" href="./default.css" as="style">
+    <link rel="stylesheet" href="./default.css">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -52,8 +52,8 @@
 
     <header>
         <div class="brand">
-            <a href=""><img src="logo.webp" alt="GetProjects" srcset="logo.webp"></a>
-            <a href=""><h1>GetProjects</h1></a>
+            <a href=""><img src="./logo.webp" alt="GetProjects" srcset="./logo.webp"></a>
+            <a href="https://getprojects.tech/" target="_self"><h1>GetProjects</h1></a>
         </div>
 
         <a onclick="copyUrl()" id="share" class="button">Share&nbsp;<i class="fa-solid fa-bullhorn"></i></a>
@@ -62,13 +62,13 @@
 
     <div id="hambergerMenu" class="mobmenu">
         <ul>
-            <li><a href=""><div id="mobMenuIco"><i class="fa-solid fa-house"></i></div>Home</a></li>
-            <li><a href=""><div id="mobMenuIco"><i class="fa-solid fa-earth-americas"></i></div>Discover</a></li>
-            <li><a href=""><div id="mobMenuIco"><i class="fa-solid fa-code"></i></div>Code</a></li>
-            <li><a href=""><div id="mobMenuIco"><i class="fa-solid fa-graduation-cap"></i></div>Learn</a></li>
-            <li><a href=""><div id="mobMenuIco"><i class="fa-solid fa-wand-magic-sparkles"></i></div>Benefits</a></li>
-            <li><a href=""><div id="mobMenuIco"><i class="fa-solid fa-circle-question"></i></div>Help</a></li>
-            <li><a href=""><div id="mobMenuIco"><i class="fa-solid fa-circle-info"></i></div>About</a></li>
+            <li><a href="https://getprojects.tech/"><div id="mobMenuIco"><i class="fa-solid fa-house"></i></div>Home</a></li>
+            <li><a href="https://getprojects.tech/discover"><div id="mobMenuIco"><i class="fa-solid fa-earth-americas"></i></div>Discover</a></li>
+            <li><a href="https://getprojects.tech/code"><div id="mobMenuIco"><i class="fa-solid fa-code"></i></div>Code</a></li>
+            <li><a href="https://getprojects.tech/learn"><div id="mobMenuIco"><i class="fa-solid fa-graduation-cap"></i></div>Learn</a></li>
+            <li><a href="https://getprojects.tech/benefits"><div id="mobMenuIco"><i class="fa-solid fa-wand-magic-sparkles"></i></div>Benefits</a></li>
+            <li><a href="https://getprojects.tech/help"><div id="mobMenuIco"><i class="fa-solid fa-circle-question"></i></div>Help</a></li>
+            <li><a href="https://getprojects.tech/about"><div id="mobMenuIco"><i class="fa-solid fa-circle-info"></i></div>About</a></li>
             <li id="shareMob"><a onclick="copyUrl()" id="share shareMob" class="button">Share&nbsp;<i class="fa-solid fa-bullhorn"></i></a></li>
         </ul>
     </div>
@@ -83,34 +83,34 @@
                 <div class="opt-card">
                     <h3>Projects</h3>
                     <hr>
-                    <a href="">Top Projects</a>
-                    <a href="">Latest Projects</a>
-                    <a href="">Frontend-Based Projects</a>
-                    <a href="">Programming-Based Projects</a>
+                    <a href="https://getprojects.tech/projects/top-projects">Top Projects</a>
+                    <a href="https://getprojects.tech/projects/latest">Latest Projects</a>
+                    <a href="https://getprojects.tech/projects/frontend-projects">Frontend-Based Projects</a>
+                    <a href="https://getprojects.tech/projects/programming-language-projects">Programming-Based Projects</a>
                 </div>
                 <div class="opt-card">
                     <h3>Websites</h3>
                     <hr>
-                    <a href="">Blog Website</a>
-                    <a href="">Portfolio Website</a>
-                    <a href="">Mini-Games (HTML5)</a>
-                    <a href="">Website Componenets</a>
+                    <a href="https://getprojects.tech/projects/blog-website">Blog Website</a>
+                    <a href="https://getprojects.tech/projects/portfolio-website">Portfolio Website</a>
+                    <a href="https://getprojects.tech//mini-games">Mini-Games (HTML5)</a>
+                    <a href="https://getprojects.tech//ui-elements">Website Componenets</a>
                 </div>
                 <div class="opt-card">
                     <h3>Programs</h3>
                     <hr>
-                    <a href="">Top Programs</a>
-                    <a href="">Latest Programs</a>
-                    <a href="">Basic OOPS Programs</a>
-                    <a href="">Complex OOPS Programs</a>
+                    <a href="https://getprojects.tech/programs/top-programs">Top Programs</a>
+                    <a href="https://getprojects.tech/programs/latest">Latest Programs</a>
+                    <a href="https://getprojects.tech/programs/oops-programs-basic">Basic OOPS Programs</a>
+                    <a href="https://getprojects.tech/programs/oops-programs-complex">Complex OOPS Programs</a>
                 </div>
                 <div id="exclusive" class="opt-card">
                     <h3>Exclusive</h3>
                     <hr>
-                    <a href="">Free Games</a>
-                    <a href="">Free E-Books</a>
-                    <a href="">Best Free Tools</a>
-                    <a href="">Must Have Goodies!!</a>
+                    <a href="https://getprojects.tech/Free/">Free Games</a>
+                    <a href="https://getprojects.tech/Free/">Free E-Books</a>
+                    <a href="https://getprojects.tech/Free/">Best Free Tools</a>
+                    <a href="https://getprojects.tech/Free/">Must Have Goodies!!</a>
                 </div>
             </div>
         </div>
@@ -247,7 +247,7 @@
         <div class="container">
             <div class="info">
                 <div class="brand">
-                    <a href=""><img src="logo.webp" alt="GetProjects" srcset="logo.webp"></a>
+                    <a href=""><img src="./logo.webp" alt="GetProjects" srcset="./logo.webp"></a>
                     <a href=""><h1>GetProjects</h1></a>
                 </div>
                 <div class="description">GetProjects is a content platforms for engineering students, those are either persueing their college or diploma and are searching for projects that can be used in final year.</div>
@@ -296,6 +296,6 @@
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
     <!-- scripts -->
-    <script src="default.js"></script>
+    <script src="./default.js"></script>
 </body>
 </html>
