--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <meta itemprop="url" content="urlHere">
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="logo.webp" type="image/x-icon">
-    <link rel="apple-touch-icon" href="logo.webp">
+    <link rel="shortcut icon" href="./logo.webp" type="image/x-icon">
+    <link rel="apple-touch-icon" href="./logo.webp">
 
     <!-- style -->
-    <link rel="preload" href="default.css" as="style">
-    <link rel="stylesheet" href="default.css">
+    <link rel="preload" href="./default.css" as="style">
+    <link rel="stylesheet" href="./default.css">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -52,7 +52,7 @@
 
     <header>
         <div class="brand">
-            <a href=""><img src="logo.webp" alt="GetProjects" srcset="logo.webp"></a>
+            <a href=""><img src="./logo.webp" alt="GetProjects" srcset="./logo.webp"></a>
             <a href="https://getprojects.tech/" target="_self"><h1>GetProjects</h1></a>
         </div>
 
@@ -247,7 +247,7 @@
         <div class="container">
             <div class="info">
                 <div class="brand">
-                    <a href=""><img src="logo.webp" alt="GetProjects" srcset="logo.webp"></a>
+                    <a href=""><img src="./logo.webp" alt="GetProjects" srcset="./logo.webp"></a>
                     <a href=""><h1>GetProjects</h1></a>
                 </div>
                 <div class="description">GetProjects is a content platforms for engineering students, those are either persueing their college or diploma and are searching for projects that can be used in final year.</div>
@@ -296,6 +296,6 @@
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
     <!-- scripts -->
-    <script src="default.js"></script>
+    <script src="./default.js"></script>
 </body>
 </html>
