--- a/404.html
+++ b/404.html
@@ -1,7 +1,3 @@
----
-permalink: /404.html
----
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +5,7 @@ permalink: /404.html
     <meta http-equiv="refresh" content="10; https://getprojects.tech">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>oops! error 404</title>
+    <title>Redirecting...</title>
     <meta name="description" content="GetProjects is a content platforms for enginnering students, those are either persueing their college or diploma and are searching for projects that can be used in final year." />
     <meta name="google" content="nopagereadaloud" />
     <meta property="og:title" content="GetProjects">
@@ -25,7 +21,7 @@ permalink: /404.html
 
     <!-- style -->
     <link rel="preload" href="./default.css" as="style">
-    <link rel="stylesheet" href="./default.css">
+    <link async rel="stylesheet" href="./default.css">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
