--- a/404.html
+++ b/404.html
@@ -16,12 +16,12 @@
     <meta itemprop="url" content="urlHere">
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="./logo.webp" type="image/x-icon">
-    <link rel="apple-touch-icon" href="./logo.webp">
+    <link rel="shortcut icon" href="https://getprojects.tech/logo.webp" type="image/x-icon">
+    <link rel="apple-touch-icon" href="https://getprojects.tech/logo.webp">
 
     <!-- style -->
-    <link rel="preload" href="./default.css" as="style">
-    <link async rel="stylesheet" href="./default.css">
+    <link rel="preload" href="https://getprojects.tech/default.css" as="style">
+    <link async rel="stylesheet" href="https://getprojects.tech/default.css">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,7 +49,7 @@
 
     <header>
         <div class="brand">
-            <a href=""><img src="./logo.webp" alt="GetProjects" srcset="./logo.webp"></a>
+            <a href=""><img src="https://getprojects.tech/logo.webp" alt="GetProjects" srcset="https://getprojects.tech/logo.webp"></a>
             <a href=""><h1>GetProjects</h1></a>
         </div>
 
@@ -251,7 +251,7 @@
         <div class="container">
             <div class="info">
                 <div class="brand">
-                    <a href=""><img src="./logo.webp" alt="GetProjects" srcset="./logo.webp"></a>
+                    <a href=""><img src="https://getprojects.tech/logo.webp" alt="GetProjects" srcset="https://getprojects.tech/logo.webp"></a>
                     <a href=""><h1>GetProjects</h1></a>
                 </div>
                 <div class="description">GetProjects is a content platforms for engineering students, those are either persueing their college or diploma and are searching for projects that can be used in final year.</div>
@@ -300,6 +300,6 @@
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
     <!-- scripts -->
-    <script src="./default.js"></script>
+    <script src="https://getprojects.tech/default.js"></script>
 </body>
 </html>
