file structure basic

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <meta itemprop="url" content="urlHere">
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="https://getprojects.tech/logo.webp" type="image/x-icon">
-    <link rel="apple-touch-icon" href="https://getprojects.tech/logo.webp">
+    <link rel="shortcut icon" href="./images/logo.webp" type="image/x-icon">
+    <link rel="apple-touch-icon" href="./images/logo.webp">
 
     <!-- style -->
-    <link rel="preload" href="https://getprojects.tech/default.css" as="style">
-    <link rel="stylesheet" href="https://getprojects.tech/default.css">
+    <link rel="preload" href="./css/default.css" as="style">
+    <link rel="stylesheet" href="./css/default.css">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -52,7 +52,7 @@
 
     <header>
         <div class="brand">
-            <a href=""><img src="https://getprojects.tech/logo.webp" alt="GetProjects" srcset="https://getprojects.tech/logo.webp"></a>
+            <a href="https://getprojects.tech/"><img src="./images/logo.webp" alt="GetProjects" srcset="./images/logo.webp"></a>
             <a href="https://getprojects.tech/" target="_self"><h1>GetProjects</h1></a>
         </div>
 
@@ -63,18 +63,16 @@
     <div id="hambergerMenu" class="mobmenu">
         <ul>
             <li><a href="https://getprojects.tech/"><div id="mobMenuIco"><i class="fa-solid fa-house"></i></div>Home</a></li>
-            <li><a href="https://getprojects.tech/discover"><div id="mobMenuIco"><i class="fa-solid fa-earth-americas"></i></div>Discover</a></li>
-            <li><a href="https://getprojects.tech/code"><div id="mobMenuIco"><i class="fa-solid fa-code"></i></div>Code</a></li>
-            <li><a href="https://getprojects.tech/learn"><div id="mobMenuIco"><i class="fa-solid fa-graduation-cap"></i></div>Learn</a></li>
-            <li><a href="https://getprojects.tech/benefits"><div id="mobMenuIco"><i class="fa-solid fa-wand-magic-sparkles"></i></div>Benefits</a></li>
-            <li><a href="https://getprojects.tech/help"><div id="mobMenuIco"><i class="fa-solid fa-circle-question"></i></div>Help</a></li>
-            <li><a href="https://getprojects.tech/about"><div id="mobMenuIco"><i class="fa-solid fa-circle-info"></i></div>About</a></li>
+            <li><a href="./pages/discover.html"><div id="mobMenuIco"><i class="fa-solid fa-earth-americas"></i></div>Discover</a></li>
+            <li><a href="./pages/code.html"><div id="mobMenuIco"><i class="fa-solid fa-code"></i></div>Code</a></li>
+            <li><a href="./pages/learn.html"><div id="mobMenuIco"><i class="fa-solid fa-graduation-cap"></i></div>Learn</a></li>
+            <li><a href="./pages/free.html"><div id="mobMenuIco"><i class="fa-solid fa-wand-magic-sparkles"></i></div>Benefits</a></li>
+            <li><a href="./pages/help.html"><div id="mobMenuIco"><i class="fa-solid fa-circle-question"></i></div>Help</a></li>
+            <li><a href="./pages/about.html"><div id="mobMenuIco"><i class="fa-solid fa-circle-info"></i></div>About</a></li>
             <li id="shareMob"><a onclick="copyUrl()" id="share shareMob" class="button">Share&nbsp;<i class="fa-solid fa-bullhorn"></i></a></li>
         </ul>
     </div>
     </header>
-
-    
 
     <div class="menu">
         <div class="option">
@@ -83,34 +81,34 @@
                 <div class="opt-card">
                     <h3>Projects</h3>
                     <hr>
-                    <a href="https://getprojects.tech/projects/top-projects">Top Projects</a>
-                    <a href="https://getprojects.tech/projects/latest">Latest Projects</a>
-                    <a href="https://getprojects.tech/projects/frontend-projects">Frontend-Based Projects</a>
-                    <a href="https://getprojects.tech/projects/programming-language-projects">Programming-Based Projects</a>
+                    <a href="./pages/projects/top-projects.html">Top Projects</a>
+                    <a href="./pages/projects/latest-projects.html">Latest Projects</a>
+                    <a href="./pages/discover/websites.html">Frontend-Based Projects</a>
+                    <a href="./pages/discover/programs.html">Programming-Based Projects</a>
                 </div>
                 <div class="opt-card">
                     <h3>Websites</h3>
                     <hr>
-                    <a href="https://getprojects.tech/projects/blog-website">Blog Website</a>
-                    <a href="https://getprojects.tech/projects/portfolio-website">Portfolio Website</a>
-                    <a href="https://getprojects.tech//mini-games">Mini-Games (HTML5)</a>
-                    <a href="https://getprojects.tech//ui-elements">Website Componenets</a>
+                    <a href="./pages/websites/blog-websites.html">Blog Website</a>
+                    <a href="./pages/websites/portfolio-websites.html">Portfolio Website</a>
+                    <a href="./pages/projects/mini-games.html">Mini-Games (HTML5)</a>
+                    <a href="./pages/projects/ui-elements.html">Website Componenets</a>
                 </div>
                 <div class="opt-card">
                     <h3>Programs</h3>
                     <hr>
-                    <a href="https://getprojects.tech/programs/top-programs">Top Programs</a>
-                    <a href="https://getprojects.tech/programs/latest">Latest Programs</a>
-                    <a href="https://getprojects.tech/programs/oops-programs-basic">Basic OOPS Programs</a>
-                    <a href="https://getprojects.tech/programs/oops-programs-complex">Complex OOPS Programs</a>
+                    <a href="./pages/programs/top-programs.html">Top Programs</a>
+                    <a href="./pages/programs/latest-programs.html">Latest Programs</a>
+                    <a href="./pages/programs/basic-oops-programs.html">Basic OOPS Programs</a>
+                    <a href="./pages/programs/complex-oops-programs.html">Complex OOPS Programs</a>
                 </div>
                 <div id="exclusive" class="opt-card">
                     <h3>Exclusive</h3>
                     <hr>
-                    <a href="https://getprojects.tech/Free/">Free Games</a>
-                    <a href="https://getprojects.tech/Free/">Free E-Books</a>
-                    <a href="https://getprojects.tech/Free/">Best Free Tools</a>
-                    <a href="https://getprojects.tech/Free/">Must Have Goodies!!</a>
+                    <a href="./pages/free.html">Free Games</a>
+                    <a href="./pages/free.html">Free E-Books</a>
+                    <a href="./pages/free.html">Best Free Tools</a>
+                    <a href="./pages/free.html">Must Have Goodies!!</a>
                 </div>
             </div>
         </div>
@@ -121,34 +119,34 @@
                 <div class="opt-card">
                     <h3>Web3</h3>
                     <hr>
-                    <a href="">Bingo</a>
-                    <a href="">Photo Editor</a>
-                    <a href="">Tic Tack Toe</a>
-                    <a href="">WhatsApp Clone</a>
+                    <a href="./pages/projects/minor-projects/bingo/">Bingo</a>
+                    <a href="./pages/projects/minor-projects/photo-editor/">Photo Editor</a>
+                    <a href="./pages/projects/mini-games/tic-tac-toe/">Tic Tack Toe</a>
+                    <a href="./pages/projects/minor-projects/whatsapp-clone/">WhatsApp Clone</a>
                 </div>
                 <div class="opt-card">
                     <h3>Python</h3>
                     <hr>
-                    <a href="">Stopwatch</a>
-                    <a href="">Calculator</a>
-                    <a href="">Voice Assistant</a>
-                    <a href="">Password Generator</a>
+                    <a href="https://getprojects.tech/python/stopwatch">Stopwatch</a>
+                    <a href="https://getprojects.tech/python/calculator">Calculator</a>
+                    <a href="https://getprojects.tech/python/voice-assistant">Voice Assistant</a>
+                    <a href="https://getprojects.tech/python/password-generator">Password Generator</a>
                 </div>
                 <div class="opt-card">
                     <h3>C / C++</h3>
                     <hr>
-                    <a href="">Bank Management</a>
-                    <a href="">Hotel Management</a>
-                    <a href="">Contact Management</a>
-                    <a href="">Student Report Management</a>
+                    <a href="https://getprojects.tech/c/bank-management">Bank Management</a>
+                    <a href="https://getprojects.tech/c/hotel-management">Hotel Management</a>
+                    <a href="https://getprojects.tech/c/contact-management">Contact Management</a>
+                    <a href="https://getprojects.tech/c/Student-report-management">Student Report Management</a>
                 </div>
                 <div id="exclusive" class="opt-card">
                     <h3>Exclusive</h3>
                     <hr>
-                    <a href="">Free Games</a>
-                    <a href="">Free E-Books</a>
-                    <a href="">Best Free Tools</a>
-                    <a href="">Must Have Goodies!!</a>
+                    <a href="https://getprojects.tech/Free/">Free Games</a>
+                    <a href="https://getprojects.tech/Free/">Free E-Books</a>
+                    <a href="https://getprojects.tech/Free/">Best Free Tools</a>
+                    <a href="https://getprojects.tech/Free/">Must Have Goodies!!</a>
                 </div>
             </div>
         </div>
@@ -247,7 +245,7 @@
         <div class="container">
             <div class="info">
                 <div class="brand">
-                    <a href=""><img src="https://getprojects.tech/logo.webp" alt="GetProjects" srcset="https://getprojects.tech/logo.webp"></a>
+                    <a href=""><img src="./images/logo.webp" alt="GetProjects" srcset="./images/logo.webp"></a>
                     <a href=""><h1>GetProjects</h1></a>
                 </div>
                 <div class="description">GetProjects is a content platforms for engineering students, those are either persueing their college or diploma and are searching for projects that can be used in final year.</div>
@@ -296,6 +294,6 @@
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
     <!-- scripts -->
-    <script src="https://getprojects.tech/default.js"></script>
+    <script src="./js/default.js"></script>
 </body>
 </html>
