--- a/404.html
+++ b/404.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- <meta http-equiv="refresh" content="7"> -->
+    <meta http-equiv="refresh" content="5, https://getprojects.tech">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GetProjects</title>
+    <title>redirecting.. to GetProjects</title>
     <meta name="description" content="GetProjects is a content platforms for enginnering students, those are either persueing their college or diploma and are searching for projects that can be used in final year." />
     <meta name="google" content="nopagereadaloud" />
     <meta property="og:title" content="GetProjects">
@@ -45,10 +45,7 @@
 
 
 </head>
-<body oncontextmenu="return false" onload="loadScreen">
-    <div id="loading">
-        <lottie-player class="loading" src="https://assets9.lottiefiles.com/private_files/lf30_rnpgzd17.json" background="transparent" speed="1" loop autoplay></lottie-player>
-    </div>
+<body oncontextmenu="return false">
 
     <header>
         <div class="brand">
