--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
 </head>
-<body oncontextmenu="return false" onload="loadScreen">
+<body oncontextmenu="return false" onload="loadScreen()">
     <div id="loading">
         <lottie-player class="loading" src="https://assets9.lottiefiles.com/private_files/lf30_rnpgzd17.json" background="transparent" speed="1" loop autoplay></lottie-player>
     </div>
