--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <li><a href="https://getprojects.tech/"><div id="mobMenuIco"><i class="fa-solid fa-house"></i></div>Home</a></li>
             <li><a href="https://getprojects.tech/discover"><div id="mobMenuIco"><i class="fa-solid fa-earth-americas"></i></div>Discover</a></li>
             <li><a href="https://getprojects.tech/code"><div id="mobMenuIco"><i class="fa-solid fa-code"></i></div>Code</a></li>
-            <li><a href="https://getprojects.tech/learn"><div id="mobMenuIco"><i class="fa-solid fa-graduation-cap"></i></div>Learn</a></li>
+            <li><a href="https://getprojects.tech/blog"><div id="mobMenuIco"><i class="fa-solid fa-pen-nib"></i></div>Blog</a></li>
             <li><a href="https://getprojects.tech/perks"><div id="mobMenuIco"><i class="fa-solid fa-wand-magic-sparkles"></i></div>Perks</a></li>
             <li><a href="https://getprojects.tech/help"><div id="mobMenuIco"><i class="fa-solid fa-circle-question"></i></div>Help</a></li>
             <li><a href="https://getprojects.tech/about"><div id="mobMenuIco"><i class="fa-solid fa-circle-info"></i></div>About</a></li>
@@ -73,7 +73,7 @@
     <div class="menu">
         <a href="https://getprojects.tech/discover"><div id="mobMenuIco"><i class="fa-solid fa-earth-americas"></i></div>Discover</a>
         <a href="https://getprojects.tech/code"><div id="mobMenuIco"><i class="fa-solid fa-code"></i></div>Code</a>
-        <a href="https://getprojects.tech/learn"><div id="mobMenuIco"><i class="fa-solid fa-graduation-cap"></i></div>Learn</a>
+        <a href="https://getprojects.tech/blog"><div id="mobMenuIco"><i class="fa-solid fa-pen-nib"></i></div>Blog</a>
         <a href="https://getprojects.tech/perks"><div id="mobMenuIco"><i class="fa-solid fa-wand-magic-sparkles"></i></div>Perks</a>
         <a href="https://getprojects.tech/help"><div id="mobMenuIco"><i class="fa-solid fa-circle-question"></i></div>Help</a>
         <a href="https://getprojects.tech/about"><div id="mobMenuIco"><i class="fa-solid fa-circle-info"></i></div>About</a>
