--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <meta itemprop="url" content="urlHere">
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="./images/logo.webp" type="image/x-icon">
-    <link rel="apple-touch-icon" href="./images/logo.webp">
+    <link rel="shortcut icon" href="https://getprojects.tech/images/logo.webp" type="image/x-icon">
+    <link rel="apple-touch-icon" href="https://getprojects.tech/images/logo.webp">
 
     <!-- style -->
-    <link rel="preload" href="./css/default.css" as="style">
-    <link rel="stylesheet" href="./css/default.css">
+    <link rel="preload" href="https://getprojects.tech/css/default.css" as="style">
+    <link rel="stylesheet" href="https://getprojects.tech/css/default.css">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,7 +49,7 @@
 
     <header>
         <div class="brand">
-            <a href="https://getprojects.tech/"><img src="./images/logo.webp" alt="GetProjects" srcset="./images/logo.webp"></a>
+            <a href="https://getprojects.tech/"><img src="https://getprojects.tech//images/logo.webp" alt="GetProjects" srcset="https://getprojects.tech//images/logo.webp"></a>
             <a href="https://getprojects.tech/" target="_self"><h1>GetProjects</h1></a>
         </div>
 
@@ -62,6 +62,7 @@
             <li><a href="https://getprojects.tech/"><div id="mobMenuIco"><i class="fa-solid fa-house"></i></div>Home</a></li>
             <li><a href="https://getprojects.tech/discover"><div id="mobMenuIco"><i class="fa-solid fa-earth-americas"></i></div>Discover</a></li>
             <li><a href="https://getprojects.tech/code"><div id="mobMenuIco"><i class="fa-solid fa-code"></i></div>Code</a></li>
+            <li><a href="https://getprojects.tech/games"><div id="mobMenuIco"><i class="fa-solid fa-gamepad"></i></div>Games</a></li>
             <li><a href="https://getprojects.tech/blog"><div id="mobMenuIco"><i class="fa-solid fa-pen-nib"></i></div>Blog</a></li>
             <li><a href="https://getprojects.tech/perks"><div id="mobMenuIco"><i class="fa-solid fa-wand-magic-sparkles"></i></div>Perks</a></li>
             <li><a href="https://getprojects.tech/help"><div id="mobMenuIco"><i class="fa-solid fa-circle-question"></i></div>Help</a></li>
@@ -73,6 +74,7 @@
     <div class="menu">
         <a href="https://getprojects.tech/discover"><div id="mobMenuIco"><i class="fa-solid fa-earth-americas"></i></div>Discover</a>
         <a href="https://getprojects.tech/code"><div id="mobMenuIco"><i class="fa-solid fa-code"></i></div>Code</a>
+        <a href="https://getprojects.tech/games"><div id="mobMenuIco"><i class="fa-solid fa-gamepad"></i></div>Games</a>
         <a href="https://getprojects.tech/blog"><div id="mobMenuIco"><i class="fa-solid fa-pen-nib"></i></div>Blog</a>
         <a href="https://getprojects.tech/perks"><div id="mobMenuIco"><i class="fa-solid fa-wand-magic-sparkles"></i></div>Perks</a>
         <a href="https://getprojects.tech/help"><div id="mobMenuIco"><i class="fa-solid fa-circle-question"></i></div>Help</a>
@@ -88,7 +90,7 @@
                 <a alt="Facebook" href="https://www.facebook.com/youtube.com.TMtechnomania" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
                 <a alt="Chrome Extension" href="https://chrome.google.com/webstore/detail/tm-launcher/ppgcdhfpgpiecpjaobadcaigbhmkpgob" target="_blank"><i class="fa-brands fa-chrome"></i></a>
                 <a alt="Instagram" href="https://instagram.com/kartikeytiwari" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <a alt="Developer Portfolio" href="getprojects.tech/portfolio" target="_blank"><i class="fa-solid fa-user"></i></a>
+                <a alt="Developer Portfolio" href="https://getprojects.tech/portfolio" target="_blank"><i class="fa-solid fa-user"></i></a>
             </div>
         </div>
 
@@ -103,6 +105,6 @@
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
     <!-- scripts -->
-    <script src="./js/default.js"></script>
+    <script src="https://getprojects.tech/js/default.js"></script>
 </body>
 </html>
