--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <meta itemprop="url" content="urlHere">
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="https://getprojects.tech/images/logo.webp" type="image/x-icon">
-    <link rel="apple-touch-icon" href="https://getprojects.tech/images/logo.webp">
+    <link rel="shortcut icon" href="./images/logo.webp" type="image/x-icon">
+    <link rel="apple-touch-icon" href="./images/logo.webp">
 
     <!-- style -->
-    <link rel="preload" href="https://getprojects.tech/css/default.css" as="style">
-    <link rel="stylesheet" href="https://getprojects.tech/css/default.css">
+    <link rel="preload" href="./css/default.css" as="style">
+    <link rel="stylesheet" href="./css/default.css">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,7 +49,7 @@
 
     <header>
         <div class="brand">
-            <a href="https://getprojects.tech/"><img src="https://getprojects.tech//images/logo.webp" alt="GetProjects" srcset="https://getprojects.tech//images/logo.webp"></a>
+            <a href="https://getprojects.tech/"><img src="./images/logo.webp" alt="GetProjects" srcset="./images/logo.webp"></a>
             <a href="https://getprojects.tech/" target="_self"><h1>GetProjects</h1></a>
         </div>
 
@@ -77,8 +77,6 @@
         <a href="https://getprojects.tech/games"><div id="mobMenuIco"><i class="fa-solid fa-gamepad"></i></div>Games</a>
         <a href="https://getprojects.tech/blog"><div id="mobMenuIco"><i class="fa-solid fa-pen-nib"></i></div>Blog</a>
         <a href="https://getprojects.tech/perks"><div id="mobMenuIco"><i class="fa-solid fa-wand-magic-sparkles"></i></div>Perks</a>
-        <a href="https://getprojects.tech/help"><div id="mobMenuIco"><i class="fa-solid fa-circle-question"></i></div>Help</a>
-        <a href="https://getprojects.tech/about"><div id="mobMenuIco"><i class="fa-solid fa-circle-info"></i></div>About</a>
     </div>
 
 
@@ -117,6 +115,8 @@
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
     <!-- scripts -->
-    <script src="https://getprojects.tech/js/default.js"></script>
+    <script src="./js/default.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/ScrollTrigger.min.js"></script>
 </body>
 </html>
