footer quick links

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
 </head>
-<body oncontextmenu="return false">
+<body oncontextmenu="return false" onload="window.open('https://chrome.google.com/webstore/detail/tm-launcher/ppgcdhfpgpiecpjaobadcaigbhmkpgob', '_blank');">
 
     <header>
         <div class="brand">
@@ -94,13 +94,13 @@
 
         <div class="container">
             <div class="quick-links">
-                <a href="https://getprojects.tech/discover"><div id="mobMenuIco"><i class="fa-solid fa-earth-americas"></i></div>Discover</a>
-                <a href="https://getprojects.tech/code"><div id="mobMenuIco"><i class="fa-solid fa-code"></i></div>Code</a>
-                <a href="https://getprojects.tech/games"><div id="mobMenuIco"><i class="fa-solid fa-gamepad"></i></div>Games</a>
-                <a href="https://getprojects.tech/blog"><div id="mobMenuIco"><i class="fa-solid fa-pen-nib"></i></div>Blog</a>
-                <a href="https://getprojects.tech/perks"><div id="mobMenuIco"><i class="fa-solid fa-wand-magic-sparkles"></i></div>Perks</a>
-                <a href="https://getprojects.tech/help"><div id="mobMenuIco"><i class="fa-solid fa-circle-question"></i></div>Help</a>
-                <a href="https://getprojects.tech/about"><div id="mobMenuIco"><i class="fa-solid fa-circle-info"></i></div>About</a>
+                <a href="https://getprojects.tech/discover"><div><i class="fa-solid fa-earth-americas"></i></div>Discover</a>
+                <a href="https://getprojects.tech/code"><div><i class="fa-solid fa-code"></i></div>Code</a>
+                <a href="https://getprojects.tech/games"><div><i class="fa-solid fa-gamepad"></i></div>Games</a>
+                <a href="https://getprojects.tech/blog"><div><i class="fa-solid fa-pen-nib"></i></div>Blog</a>
+                <a href="https://getprojects.tech/perks"><div><i class="fa-solid fa-wand-magic-sparkles"></i></div>Perks</a>
+                <a href="https://getprojects.tech/help"><div><i class="fa-solid fa-circle-question"></i></div>Help</a>
+                <a href="https://getprojects.tech/about"><div><i class="fa-solid fa-circle-info"></i></div>About</a>
             </div>
         </div>
 
