--- a/index.html
+++ b/index.html
@@ -49,7 +49,13 @@
         <header id="navbar"></header>
 
 
-        <div class="section bd"></div>
+        <div id="hero" class="section bd">
+            <div data-aos="fade-up" class="heading">
+                <h1>Build <span class="blue">Awesome</span> projects and improve your <span class="blue">Resume.</span></h1>
+            </div>
+        </div>
+
+        <div id="searchMob"></div>
 
 
         <!-- Footer -->
