hero section work in progress

--- a/index.html
+++ b/index.html
@@ -50,12 +50,16 @@
 
 
         <div id="hero" class="section bd">
-            <div data-aos="fade-up" class="heading">
+            <div data-aos="fade-up"class="heading">
                 <h1>Build <span class="blue">Awesome</span> projects and improve your <span class="blue">Resume.</span></h1>
+                <h3>GetProjects is a content platforms for engineering students, those are either persuing their college or diploma and are searching for projects that can be used in final year.</h3>
+                
+            <a data-aos-delay="300"  data-aos="fade-up"  class="btn-primary" href="#">Get Projects</a>
             </div>
+            <lottie-player  data-aos-delay="300"  data-aos="fade-up"  class="lottie" src="https://assets4.lottiefiles.com/packages/lf20_MUXpdy.json" speed="1" loop autoplay></lottie-player>
+            
         </div>
 
-        <div id="searchMob"></div>
 
 
         <!-- Footer -->
@@ -66,7 +70,7 @@
     <script src="/js/index.js"></script>
 
     <!-- loading animation script -->
-    <!-- <script src="./js/lottie-player.js"></script> -->
+    <script src="./js/lottie-player.js"></script>
 
     <!-- scripts -->
     <script src="/js/ScrollTrigger.min.js"></script>
