user desktop view ready

--- a/user/index.html
+++ b/user/index.html
@@ -86,7 +86,7 @@
 
             <div class="section about">
                 <h1 data-aos="fade-right" >About</h1>
-                <h3 data-aos-delay="200" data-aos="fade-zoom" >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet repudiandae, blanditiis totam laborum fuga ut ad suscipit accusamus, non sequi similique illum? Et excepturi tempora voluptas enim vel rem eos voluptatum delectus!</h3>
+                <h3 data-aos-delay="200" data-aos="fade-zoom" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia veniam quisquam atque maxime quidem voluptates, nemo quia ad, obcaecati harum facere placeat earum mollitia vel neque a provident assumenda sunt autem! Provident consequuntur quibusdam aliquam deleniti, nihil architecto, culpa doloremque dolor possimus officia iusto voluptas delectus adipisci incidunt suscipit rem pariatur at dolorem consequatur maiores repellendus unde error cupiditate. Officia id dolorem distinctio omnis, quisquam quos harum exercitationem beatae vero velit. Iusto, aperiam facere! Quibusdam.</h3>
                 <a href="" class="btn yellow-light-grey">Project</a>
             </div>
         </div>
