--- a/user/index.html
+++ b/user/index.html
@@ -50,7 +50,7 @@
 
 
         <div id="user-hero" class="section">
-            <div data-aos="fade-up" class="bg-poligon yellow-light-grey"></div>
+            <div data-aos="fade-up" class="bg-poligon blue-grey"></div>
             <div data-aos-delay="300" data-aos="fade-zoom" class="user-image"></div>
             <div data-aos-delay="400" data-aos="fade-right" class="user-name"><h1>Niklaus Wirth</h1></div>
             <div data-aos-delay="450" data-aos="fade-right" class="lang-tags">
@@ -82,13 +82,13 @@
                     </li>
                 </ul>
             </div>
-            <a href="" class="btn" download>Resume&nbsp;<i class="fa-solid fa-download"></i></a>
+            <a href="" class="btn-primary" download>Resume&nbsp;<i class="fa-solid fa-download"></i></a>
+        </div>
 
-            <div class="section about">
-                <h1 data-aos="fade-right" >About</h1>
-                <h3 data-aos-delay="200" data-aos="fade-zoom" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia veniam quisquam atque maxime quidem voluptates, nemo quia ad, obcaecati harum facere placeat earum mollitia vel neque a provident assumenda sunt autem! Provident consequuntur quibusdam aliquam deleniti, nihil architecto, culpa doloremque dolor possimus officia iusto voluptas delectus adipisci incidunt suscipit rem pariatur at dolorem consequatur maiores repellendus unde error cupiditate. Officia id dolorem distinctio omnis, quisquam quos harum exercitationem beatae vero velit. Iusto, aperiam facere! Quibusdam.</h3>
-                <a href="" class="btn yellow-light-grey">Project</a>
-            </div>
+        <div class="section about">
+            <h1 data-aos="fade-right" >About</h1>
+            <h3 data-aos-delay="200" data-aos="fade-zoom" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia veniam quisquam atque maxime quidem voluptates, nemo quia ad, obcaecati harum facere placeat earum mollitia vel neque a provident assumenda sunt autem! Provident consequuntur quibusdam aliquam deleniti, nihil architecto, culpa doloremque dolor possimus officia iusto voluptas delectus adipisci incidunt suscipit rem pariatur at dolorem consequatur maiores repellendus unde error cupiditate. Officia id dolorem distinctio omnis, quisquam quos harum exercitationem beatae vero velit. Iusto, aperiam facere! Quibusdam.</h3>
+            <a href="" class="btn-primary">Project</a>
         </div>
 
 
@@ -107,6 +107,6 @@
     <script>
         AOS.init();
     </script>
-    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="tmtechnomania" data-description="Support me on Buy me a coffee!" data-message="Thanks for visiting us.. You can buy a coffee for the sleepy programmers behind the content!!" data-color="var(--yellow-light)" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
+    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="tmtechnomania" data-description="Support me on Buy me a coffee!" data-message="Thanks for visiting us.. You can buy a coffee for the sleepy programmers behind the content!!" data-color="var(--blue-blue)" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
 </body>
 </html>
