--- a/user/index.html
+++ b/user/index.html
@@ -50,9 +50,12 @@
 
 
         <div id="user-hero" class="section">
-            <div data-aos="fade-up" class="bg-poligon blue-grey"></div>
-            <div data-aos-delay="300" data-aos="fade-zoom" class="user-image"></div>
-            <div data-aos-delay="400" data-aos="fade-right" class="user-name"><h1>Niklaus Wirth</h1></div>
+            <div class="flex-card">
+                <div data-aos="fade-up" class="bg-poligon blue-grey"></div>
+                <div data-aos-delay="300" data-aos="fade-zoom" class="user-image"></div>
+            </div>
+            <div class="flex-card">
+                <div data-aos-delay="400" data-aos="fade-right" class="user-name"><h1>Niklaus Wirth</h1></div>
             <div data-aos-delay="450" data-aos="fade-right" class="lang-tags">
                 <h3>
                     HTML5 - CSS3 - JS
@@ -83,6 +86,7 @@
                 </ul>
             </div>
             <a href="" class="btn-primary" download>Resume&nbsp;<i class="fa-solid fa-download"></i></a>
+            </div>
         </div>
 
         <div class="section about">
