minor theme changes

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h1>Build <span class="blue">Awesome</span> projects and improve your <span class="blue">Resume.</span></h1>
                 <h3>GetProjects is a content platforms for engineering students, those are either persuing their college or diploma and are searching for projects that can be used in final year.</h3>
                 
-            <a data-aos-delay="300"  data-aos="fade-up"  class="btn-primary" href="#">Get Projects</a>
+            <a class="btn-primary" href="#">GetProjects</a>
             </div>
             <lottie-player  data-aos-delay="300"  data-aos="fade-up"  class="lottie" src="https://assets4.lottiefiles.com/packages/lf20_MUXpdy.json" speed="1" loop autoplay></lottie-player>
             
