--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <script src="./js/lottie-player.js"></script>
 
     <!-- scripts -->
-    <script src="/js/ScrollTrigger.min.js"></script>
+    <!-- <script src="/js/ScrollTrigger.min.js"></script> -->
     <script>
         AOS.init();
     </script>
